--- a/software/_posts/2017-10-01-tardis.md
+++ b/software/_posts/2017-10-01-tardis.md
@@ -5,7 +5,7 @@ description: Toolkit for automatic and rapid discovery of structural variants
 image: /images/software/tardis.png
 contributors: asylvz calkan_cs ckockan HormozdiariLab
 year: 2017
-repo: bilkentCompGen/tardis
+repo: BilkentCompGen/tardis
 docker: alkanlab/tardis
 ---
 
