--- a/software/_posts/2017-10-01-tardis.md
+++ b/software/_posts/2017-10-01-tardis.md
@@ -4,10 +4,9 @@ title: TARDIS
 description: Toolkit for automatic and rapid discovery of structural variants
 image: /images/software/tardis.png
 contributors: 
-  - asylvz
-  - calkan_cs
-  - ckockan
-  - HormozdiariLab
+  - arda-söylev
+  - can-koçkan
+  - can-alkan
 year: 2017
 repo: BilkentCompGen/tardis
 docker: alkanlab/tardis
