--- a/software/_posts/2017-10-01-tardis.md
+++ b/software/_posts/2017-10-01-tardis.md
@@ -4,9 +4,9 @@ title: TARDIS
 description: Toolkit for automatic and rapid discovery of structural variants
 image: /images/software/tardis.png
 contributors: 
-  - arda-söylev
-  - can-koçkan
-  - can-alkan
+  - Arda Söylev
+  - Can Koçkan
+  - Can Alkan
 year: 2017
 repo: BilkentCompGen/tardis
 docker: alkanlab/tardis
